update the team page info.

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -54,7 +54,7 @@ author_profile: true
     <div class="member">
         <span class="name">XU HAI</span>
         <span class="info">Ph.D., South China University of Technology </span>
-        <span class="info">Research interests: Wireless power transfer converters for electric vehicles</span>
+        <span class="info">Research interests: Wireless power transfer, Power electronic vehicles</span>
     </div>
 
     <h2>PhD Student</h2>
@@ -63,7 +63,7 @@ author_profile: true
         <span class="name">CHEN TAIMING</span>
         <span class="info">Ph.D. student (2024 - Now )</span>
         <span class="info">B.S., South China University of Technology (2020-2024)</span>
-        <span class="info">Research interests: High-frequency power integrated converters</span>
+        <span class="info">Research interests: Single-stage AC-DC converters, Solid-state transformers</span>
     </div>
 
     <div class="member">
@@ -76,24 +76,16 @@ author_profile: true
     <div class="member">
         <span class="name">MENG HUI</span>
         <span class="info">Ph.D. student (2024 - Now )</span>
-        <span class="info">M.S., South China University of Technology (2020-2024)</span>
-        <span class="info">B.S., South China University of Technology (2020-2024)</span>
-        <span class="info">Research interests: WBG devices</span>
+        <span class="info">M.S., South China University of Technology (2021-2024)</span>
+        <span class="info">B.S., Hebei University of Technology (2017-2021)</span>
+        <span class="info">Research interests: Health status monitoring of wide bandgap (WBG) semiconductor devices</span>
     </div>
 
     <div class="member">
         <span class="name">ZHOU QINGRUI</span>
         <span class="info">Ph.D. student (2025 - Now )</span>
         <span class="info">B.S., Hong Kong Polytechnic University (2021-2025)</span>
-        <span class="info">Research interests:  power converters</span>
-    </div>
-
-
-    <div class="member">
-        <span class="name">LIU YICHENG</span>
-        <span class="info">Ph.D. student (Ongoing) </span>
-        <span class="info">B.S., Hong Kong Polytechnic University (2022-2026)</span>
-        <span class="info">Research interests:  power converters</span>
+        <span class="info">Research interests: Energy harvesting, High-frequency inverters</span>
     </div>
 
 </div>
