update team page

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -76,7 +76,7 @@ author_profile: true
     <div class="member">
         <span class="name">MENG HUI</span>
         <span class="info">Ph.D. student (2024 - Now )</span>
-        <span class="info">M.S., South China University of Technology (2021-2024)</span>
+        <span class="info">M.S.,  Hebei University of Technology (2021-2024)</span>
         <span class="info">B.S., Hebei University of Technology (2017-2021)</span>
         <span class="info">Research interests: Health status monitoring of wide bandgap (WBG) semiconductor devices</span>
     </div>
@@ -88,6 +88,19 @@ author_profile: true
         <span class="info">Research interests: Energy harvesting, High-frequency inverters</span>
     </div>
 
+
+      <div class="member">
+        <span class="name">ZHOU QINGRUI</span>
+        <span class="info">Ph.D. student (2025 - Now )</span>
+        <span class="info">B.S., Hong Kong Polytechnic University (2021-2025)</span>
+        <span class="info">Research interests: Energy harvesting, High-frequency inverters</span>
+    </div>
+
+     <div class="member">
+        <span class="name">LIU YCHENG</span>
+        <span class="info">Ph.D. student (2026 - Now )</span>
+        <span class="info">B.S., Hong Kong Polytechnic University  (2022-2026)</span>
+        <span class="info">Research interests: Solid-state transformers (SST)</span>
 </div>
 
 </body>
