update team page

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -97,10 +97,10 @@ author_profile: true
     </div>
 
      <div class="member">
-        <span class="name">LIU YCHENG</span>
+        <span class="name">LIU YICHENG</span>
         <span class="info">Ph.D. student (2026 - Now )</span>
         <span class="info">B.S., Hong Kong Polytechnic University  (2022-2026)</span>
-        <span class="info">Research interests: Solid-state transformers (SST)</span>
+        <span class="info">Research interests: Monitoring technology for Solid-state transformers (SST)</span>
 </div>
 
 </body>
